# VoiceSocialAI

./: LOCAL_SETUP.md  README.md  app.py  models.py  pyproject.toml  replit.md  requirements.txt  tasks.py
attached_assets/: Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-settings-html-Traceback-most-recent-call-l-1757323552802_1757323552804.txt
routes/: api_routes.py  main_routes.py
services/: command_processor.py  email_service.py  enhanced_voice_service.py  facebook_service.py  file_processor.py  gemini_service.py  multi_ai_service.py  text_ai_service.py  voice_service.py  whatsapp_service.py
static/css/: style.css
static/js/: dashboard.js  voice-control.js
templates/: base.html  chat_home.html  dashboard.html  index.html  settings.html  text_generator.html
